--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.9",
+    "@ai-sdk/react": "^3.0.39",
     "@sanity/cli": "^3.80.1",
     "@sanity/client": "^6.28.3",
     "@sanity/image-url": "^1.1.0",
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
+    "ai": "^6.0.37",
     "next": "15.2.8",
+    "pdf-parse": "^2.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "stripe": "^17.7.0"
+    "redis": "^5.10.0",
+    "stripe": "^17.7.0",
+    "zod": "^4.3.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
